Fix watchdog test for Android Java API